--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-automated-login-totp",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A script to login to NPM non-interactively.",
   "bin": {
     "npm-automated-login-totp": "./index.js"
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "publish": "node index.js --generate-otp; npm publish --access public",
+    "publish": "npm publish --auth-type=legacy --otp=$(node index.js --generate-otp --no-color) --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
