--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-automated-login-totp",
-  "version": "1.4.8",
+  "version": "1.4.9",
   "description": "A script to login to NPM non-interactively.",
   "bin": {
     "npm-automated-login-totp": "./index.js"
@@ -40,7 +40,6 @@
   "dependencies": {
     "colors": "^1.4.0",
     "commander": "^2.19.0",
-    "otplib": "^12.0.1",
-    "totp-generator": "^0.0.13"
+    "otplib": "^12.0.1"
   }
 }
